installed packages and added gitignore

--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/realDerekTan/websc/issues"
   },
-  "homepage": "https://github.com/realDerekTan/websc#readme"
+  "homepage": "https://github.com/realDerekTan/websc#readme",
+  "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
+    "puppeteer": "^5.1.0",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.5"
+  }
 }
