--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cheerio": "^1.0.0-rc.3",
     "puppeteer": "^5.1.0",
     "request": "^2.88.2",
-    "request-promise": "^4.2.5"
+    "request-promise": "^4.2.5",
+    "scraperjs": "^1.2.0"
   }
 }
